footer and work section added

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,65 @@
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
-    
 }
 h1,h2,h3{
     font-family: 'Bebas Neue', cursive;
     
     color: #363958;
     font-weight: 500;
+    margin-bottom: 20px;
 }
 
 img{
-    width: 100%;
+    width: 80%;
 }
 p{
     font-size: 1rem;
+    
+    margin-bottom: 50px;
 }
 section{
     height: 500px;
+    margin-bottom: 150px;
+}
+li{
+    display: inline-block;
+    font-size: 1rem;
+    
+}
+li a{
+    color: #3c3c3c;
+    text-decoration: none;
+}
+nav{
+    float:right;
+    height: 120px;
+    margin-right: 10%;
+    
+}
+footer{
+    text-align: center;
+    margin-bottom: 50px;
+}
+nav li{
+    padding-left: 50px;
+}
+.top-section{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
 }
 
-.top-section{
-   
+.top-section p{
+    width: 80%;
+}
+.about-section p{
+    width: 80%;
+    
 }
 .half-width{
     width: 40%;
     float: left;
+    margin-left: 10%;
 }
 
 .color-highlight{
@@ -38,10 +72,12 @@ section{
     font-weight: 400;
     text-decoration: none;
     border-radius: 5px;
+    
 }
 
 .big-font{
     font-size: 5rem;
+    padding-top: 70px;
 }
 
 .big-medium-font{
@@ -51,10 +87,47 @@ section{
 .medium-font{
     font-size: 1.5rem;
 }
+
 .one-third-width{
-    width: 30%;
+    width: 25%;
     float: left;
+    margin-left:4%;
+    box-shadow: 5px 5px 30px rgb(187, 160, 160);
+    border-radius: 10px;
+    padding: 10px;
 }
 footer p{
     font-size: 2rem;
+    margin:0;
+    margin-bottom: 1rem;
+    color: #363958;
+    font-weight: 700;
+}
+footer h3{
+    margin-bottom: 1rem;
+}
+
+footer img{
+    width: 40px;
+}
+.center-align{
+    text-align: center;
+    margin-bottom: 70px;
+}
+.cards{
+    margin-left: 80px;
+}
+
+.one-third-width img{
+    margin-left: 28px;
+}
+
+.footer-icon{
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-top: 8px;
+}
+
+.inquiry-section{
+    background-image: url("images/inquiry.png") no-repeat;
 }
