--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
-    
+    margin: 0;
+    background-image: url("../images/top-banner.png");
+    background-repeat: no-repeat;
 }
 h1,h2,h3{
     font-family: 'Bebas Neue', cursive;
@@ -37,13 +39,14 @@ nav{
     height: 120px;
     margin-right: 10%;
     
+    
 }
 footer{
     text-align: center;
     margin-bottom: 50px;
 }
 nav li{
-    padding-left: 50px;
+    padding-left: 60px;
 }
 .top-section{
     background-image: url("images/top-banner.png");
@@ -146,11 +149,18 @@ footer img{
 .working-section img{
     width: 100%;
 }
+.working-section{
+    background-image: url("../images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position-y: 200px;
+}
 .blog-section{
     width: 50%;
     text-align: center;
     margin: 0 auto 0 auto;
     margin-bottom: 150px;
+    
+
 }
 .blog-section img{
     border: 4px solid black;
@@ -158,6 +168,9 @@ footer img{
 
 .about-section{
     height: 400px;
+    background-image: url("../images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
 .about-section h2{
